# iperf3-tui

./: Cargo.toml  LICENSE  README.md  main.rs
.github/workflows/: rust.yml
src/: main.rs
